Resume work on revised header. Strip hero from header, change color and heights and containers. Update classes to represent semantic html elements and not odd web flow names. Swap out logos for darker logo. Fix text styles. Scour the internet for how to do a border bottom gradient for hover like th design has. SUCCESS! Fix search bar to new design including hover state and active. Remove extra icon nav. Align for desktop and large screens. Begin work on responsive behaviors.

--- a/css/format.css
+++ b/css/format.css
@@ -75,3 +75,6 @@ p {
 .inline-block {
   display: inline-block!important;
 }
+.block {
+  display: block!important;
+}
